[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Tortoise.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Rabbit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CEILING.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Main scene.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/shakeCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/fonts/winkleFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/tryAgainUi.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=9]
[ext_resource path="res://Sprites/background/backgrounds/blue-sky.png" type="Texture" id=10]
[ext_resource path="res://resources/sfx/splat.mp3" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.1875, 513.125 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.75, 522 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "scaleLabel"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Main scene" type="Node2D"]
script = ExtResource( 4 )

[node name="ControlsTut" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="stomp" type="Label" parent="ControlsTut"]
margin_left = 715.0
margin_top = 403.0
margin_right = 1120.0
margin_bottom = 598.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Stomp: S
"

[node name="stomp2" type="Label" parent="ControlsTut"]
margin_left = 404.0
margin_top = 287.0
margin_right = 809.0
margin_bottom = 482.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Left: A"

[node name="stomp3" type="Label" parent="ControlsTut"]
margin_left = 1125.0
margin_top = 287.0
margin_right = 1530.0
margin_bottom = 482.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Right: D"

[node name="backgroundSprite" type="Sprite" parent="."]
position = Vector2( 979, 841.465 )
scale = Vector2( 2.5075, 4.19366 )
z_index = -3
texture = ExtResource( 10 )

[node name="Tortoise" parent="." instance=ExtResource( 1 )]
position = Vector2( 890, 55 )

[node name="CEILING" parent="." instance=ExtResource( 3 )]
position = Vector2( -7, -38 )
scale = Vector2( 1.73019, 1.17451 )

[node name="Ground" parent="." instance=ExtResource( 5 )]

[node name="shakeCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 984, 524 )
current = true

[node name="Bounds" type="Node" parent="."]

[node name="playerBound" type="StaticBody2D" parent="Bounds"]
position = Vector2( 10, 316 )
collision_layer = 4

[node name="leftBound" type="CollisionShape2D" parent="Bounds/playerBound"]
position = Vector2( -20.625, 205.125 )
shape = SubResource( 2 )

[node name="playerBound2" type="StaticBody2D" parent="Bounds"]
position = Vector2( 626, -5 )
collision_layer = 4

[node name="rightBound" type="CollisionShape2D" parent="Bounds/playerBound2"]
position = Vector2( 1298, 525 )
shape = SubResource( 2 )

[node name="spawnBound" type="StaticBody2D" parent="Bounds"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/spawnBound"]
position = Vector2( -82, 515 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds/spawnBound"]
position = Vector2( 1997, 510 )
shape = SubResource( 3 )

[node name="spawnPoints" type="Node" parent="."]

[node name="spawnPoint1" type="Position2D" parent="spawnPoints"]
position = Vector2( -51, 816 )

[node name="spawnPoint2" type="Position2D" parent="spawnPoints"]
position = Vector2( 1974, 813 )

[node name="Rabbit" parent="." instance=ExtResource( 2 )]
position = Vector2( 1055, 830 )

[node name="Rabbit2" parent="." instance=ExtResource( 2 )]
position = Vector2( 493, 854 )

[node name="Rabbit3" parent="." instance=ExtResource( 2 )]
position = Vector2( 869, 850 )

[node name="Rabbit4" parent="." instance=ExtResource( 2 )]
position = Vector2( 1308, 827 )

[node name="Rabbit5" parent="." instance=ExtResource( 2 )]
position = Vector2( 186, 846 )

[node name="Rabbit6" parent="." instance=ExtResource( 2 )]
position = Vector2( 1799, 825 )

[node name="tryAgainUi" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="tryAgainUi"]
margin_left = 620.0
margin_top = 202.0
margin_right = 1324.0
margin_bottom = 298.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Spill more blood!"

[node name="Button" type="Button" parent="tryAgainUi"]
margin_left = 725.0
margin_top = 433.0
margin_right = 1181.0
margin_bottom = 535.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Try again"
flat = true
expand_icon = true

[node name="Score" type="Control" parent="."]
margin_left = -95.0
margin_top = -6.0
margin_right = -55.0
margin_bottom = 34.0
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Score"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1496.0
margin_top = 56.0
margin_right = 1814.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 7 )
text = "Score: "

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]
anims/RESET = SubResource( 5 )
anims/scaleLabel = SubResource( 4 )

[node name="splatSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="controlsUiTween" type="Tween" parent="."]

[connection signal="button_down" from="tryAgainUi/Button" to="tryAgainUi" method="_on_Button_button_down"]
[connection signal="tween_completed" from="controlsUiTween" to="." method="_on_controlsUiTween_tween_completed"]
